# godot_gameplay_attributes

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  godot_gameplay_attributes.gdextension
.github/workflows/: builds.yml
doc_classes/: Attribute.xml  AttributeBase.xml  AttributeBuff.xml  AttributeBuffBase.xml  AttributeOperation.xml  RuntimeAttribute.xml
docs/: README.md  install.md
docs/classes/: Attribute.md  AttributeBuff.md  AttributeComputationArgument.md  AttributeContainer.md  AttributeOperation.md  AttributeSet.md  README.md  RuntimeAttribute.md  RuntimeBuff.md
docs/how-to/: README.md  apply_damage.md  first-steps.md  make-a-rpg-levelling-system.md  persist-attributes-when-character-dies.md
godot/: .gitattributes  project.godot  test.conf
godot/addons/godot_gameplay_attributes/: godot_gameplay_attributes.gdextension  godot_gameplay_attributes.gdextension.uid
godot/addons/gut/: GutScene.gd.uid  UserFileViewer.gd.uid  autofree.gd.uid  awaiter.gd.uid  collected_script.gd.uid  collected_test.gd.uid  comparator.gd.uid  compare_result.gd.uid  diff_formatter.gd.uid  diff_tool.gd.uid  double_tools.gd.uid  doubler.gd.uid  dynamic_gdscript.gd.uid  gut.gd.uid  gut_cmdln.gd.uid  gut_config.gd.uid  gut_loader.gd.uid  gut_plugin.gd.uid  gut_to_move.gd.uid  gut_vscode_debugger.gd.uid  hook_script.gd.uid  inner_class_registry.gd.uid  input_factory.gd.uid  input_sender.gd.uid  junit_xml_export.gd.uid  lazy_loader.gd.uid  logger.gd.uid  method_maker.gd.uid  one_to_many.gd.uid  orphan_counter.gd.uid  parameter_factory.gd.uid  parameter_handler.gd.uid  printers.gd.uid  result_exporter.gd.uid  script_parser.gd.uid  signal_watcher.gd.uid  spy.gd.uid  strutils.gd.uid  stub_params.gd.uid  stubber.gd.uid  (+8 more)
godot/examples/: main.gd.uid  main.tscn
godot/examples/attribute_buff_stacking_example/: attribute_buff_stacking_example.gd  attribute_buff_stacking_example.gd.uid  attribute_buff_stacking_example.tscn  attribute_buff_stacking_example_attribute_set.tres  attribute_buff_stacking_example_buff.gd  attribute_buff_stacking_example_buff.gd.uid
godot/examples/attribute_buffs_demo/: attribute_buffs_attribute_set.tres  attribute_buffs_demo.gd  attribute_buffs_demo.gd.uid  attribute_buffs_demo.tscn
godot/examples/attribute_buffs_programmatic_operations/: attribute_buffs_programmatic_operations.gd.uid  attribute_buffs_programmatic_operations.tscn
godot/examples/attribute_container/: attribute_container.gd  attribute_container.gd.uid  attribute_container.tscn  buff_duration.gd.uid  buff_duration.tscn
godot/gameplay/: readme.md
godot/tests/: attribute_operations.test.gd  attribute_operations.test.gd.uid
src/: CMakeLists.txt  attribute.cpp  attribute.hpp  attribute_container.cpp  attribute_container.hpp  buff_pool_queue.cpp  buff_pool_queue.hpp  register_types.cpp  register_types.hpp
(+286 files in other folders)
